--- a/style.css
+++ b/style.css
@@ -682,12 +682,12 @@ footer span a:hover{
     .navbar .menu{
         position:fixed;
         height: 100vh;
-        width:100%;
+        width:50%;
         left:-100%;
         top:0;
-        background: #111;
+        background: rgba(17, 17, 17, 0.774);
         text-align: center;
-        padding-top: 80px;
+        padding-top: 60px;
         transition: all 0.3s ease;
     }
     .navbar .menu.active{
